- Added new changes.

--- a/src/app/pages/Incidents/view-incident/view-incident.component.html
+++ b/src/app/pages/Incidents/view-incident/view-incident.component.html
@@ -1,10 +1,12 @@
+
+
 <div class="container justify-content-center align-items-center">
 	<div class="p-3">		
 		<nav>
 			<div class="nav nav-tabs" id="nav-tab" role="tablist">
-				<button class="nav-link active" id="nav-create-incident-tab" data-bs-toggle="tab" data-bs-target="#nav-create-incident" type="button" role="tab" aria-controls="nav-create-incident" aria-selected="true">Create Incident</button>
-				<button class="nav-link" id="nav-chat-tab" data-bs-toggle="tab" data-bs-target="#nav-chat" type="button" role="tab" aria-controls="nav-chat" aria-selected="false">Chat</button>
-				<button class="nav-link" id="nav-Comment-tab" data-bs-toggle="tab" data-bs-target="#nav-Comment" type="button" role="tab" aria-controls="nav-Comment" aria-selected="false">Comment</button>
+				<button (click)="showTab('incident')" class="nav-link active" id="nav-create-incident-tab" data-bs-toggle="tab" data-bs-target="#nav-create-incident" type="button" role="tab" aria-controls="nav-create-incident" aria-selected="true">Incident</button>
+				<button (click)="showTab('chat')" class="nav-link" id="nav-chat-tab" data-bs-toggle="tab" data-bs-target="#nav-chat" type="button" role="tab" aria-controls="nav-chat" aria-selected="false">Chat</button>
+				<button (click)="showTab('comment')" class="nav-link" id="nav-Comment-tab" data-bs-toggle="tab" data-bs-target="#nav-Comment" type="button" role="tab" aria-controls="nav-Comment" aria-selected="false">Comment</button>
 			</div>
 		</nav>
 		<div class="tab-content p-4 border" id="nav-tabContent">
@@ -15,20 +17,20 @@
                             <div class="row mb-3">
                                 <label for="inputDescription" class="form-label">Description</label>
                               <div class="col-sm-12">
-                                <input type="test" class="form-control" formControlName="description" id="inputDescription" placeholder="Enter Description">
+                                <input [(ngModel)]="incident.description" type="text" class="form-control disable-div-content" formControlName="description" id="inputDescription" placeholder="Enter Description">
                               </div>
                             </div>
                         
                             <div class="row mb-3">
                                 <label for="inputSymptoms" class="form-label">Symptoms</label>
                               <div class="col-sm-12">
-                                <input type="test" class="form-control" formControlName="symptoms" id="inputSymptoms" placeholder="Enter Symptoms">
+                                <input readonly [(ngModel)]="incident.symptoms" type="text" class="form-control" formControlName="symptoms" id="inputSymptoms" placeholder="Enter Symptoms">
                               </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="inputSymptoms" class="form-label">Tenant</label>
                               <div class="col-sm-12">
-                                <select class="form-select" formControlName="tenantId" id="tenantId">
+                                <select [(ngModel)]="incident.tenantId" class="form-select disable-div-content" formControlName="tenantId" id="tenantId">
                                     <option value="1" selected>HR</option>
                                     <option value="2">IT</option>
                                     <option value="3">Facility</option>
@@ -39,7 +41,7 @@
                             <div class="row mb-3">
                                 <label for="inputSymptoms" class="form-label">Priority</label>
                               <div class="col-sm-12">
-                                <select class="form-select" formControlName="priorityId" id="tenantId">
+                                <select [(ngModel)]="incident.priority" class="form-select disable-div-content" formControlName="priorityId" id="tenantId">
                                     <option value="0" selected>High</option>
                                     <option value="1">Medium</option>
                                     <option value="2">Low</option>
@@ -50,7 +52,7 @@
                             <div class="row mb-3">
                                 <label for="inputSymptoms" class="form-label">Urgency</label>
                               <div class="col-sm-12">
-                                <select class="form-select" formControlName="urgencyId" id="urgencyId">
+                                <select [(ngModel)]="incident.urgency" class="form-select disable-div-content" formControlName="urgencyId" id="urgencyId">
                                     <option value="0" selected>High</option>
                                     <option value="1">Medium</option>
                                     <option value="2">Low</option>
@@ -62,7 +64,7 @@
                             <div class="row mb-3">
                                 <label for="inputSymptoms" class="form-label">Country</label>
                               <div class="col-sm-12">
-                                <select class="form-select" id="countryId">
+                                <select class="form-select disable-div-content" id="countryId">
                                     <option value="1">India</option>
                                 </select>
                               </div>
@@ -71,7 +73,7 @@
                             <div class="row mb-3">
                                 <label for="inputSymptoms" class="form-label">State</label>
                               <div class="col-sm-12">
-                                <select class="form-select" id="stateId">
+                                <select class="form-select disable-div-content" id="stateId">
                                     <option value="1">Maharashtra</option>
                                 </select>
                               </div>
@@ -80,8 +82,9 @@
                             <div class="row mb-3">
                                 <label for="inputSymptoms" class="form-label">City</label>
                               <div class="col-sm-12">
-                                <select class="form-select" formControlName="cityId" id="cityId">
+                                <select [(ngModel)]="incident.cityId"  class="form-select disable-div-content" formControlName="cityId" id="cityId">
                                     <option value="1" selected>Pune</option>
+                                    <option value="2" selected>Mumbai</option>
                                 </select>
                               </div>
                             </div>
@@ -89,14 +92,14 @@
                             <div class="row mb-3">
                                 <label for="inputSymptoms" class="form-label">Status</label>
                               <div class="col-sm-12">
-                                <select class="form-select" formControlName="statusId" id="statusId">
-                                    <option value="0" selected="selected">New</option>
-                                    <option value="1" [disabled]="true">Assigned</option>
-                                    <option value="2" [disabled]="true">In Progress</option>
-                                    <option value="3" [disabled]="true">Resolved</option>
-                                    <option value="4" [disabled]="true">Closed</option>
-                                    <option value="5" [disabled]="true">Cancelled</option>
-                                    <option value="6" [disabled]="true">Rejected</option>
+                                <select [(ngModel)]="incident.status" class="form-select" formControlName="status" id="statusId">
+                                    <option value="0">New</option>
+                                    <option value="1">Assigned</option>
+                                    <option value="2">In Progress</option>
+                                    <option value="3">Resolved</option>
+                                    <option value="4">Closed</option>
+                                    <option value="5">Cancelled</option>
+                                    <option value="6">Rejected</option>
                                 </select>
                               </div>
                             </div>
@@ -104,7 +107,7 @@
                     </div>
                     <div class="row mb-3 text-start">        
                         <div class="col-sm-12">
-                            <button type="button" type="submit" [disabled]="!form.valid" class="btn btn-primary">Create</button>
+                            <button type="button" type="submit" [disabled]="!form.valid" class="btn btn-primary">Save</button>
                         </div>
                       </div>            
                   </form>
