--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,8 @@
 @import "scss/plugins/plugins";
 
 @import "scss/custom";
+
+.disable-div-content{
+    pointer-events: none;
+    opacity: .8;
+}
