--- a/src/app/pages/Incidents/incidents-list/incidents-list.component.html
+++ b/src/app/pages/Incidents/incidents-list/incidents-list.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row">
       <div class="col-12 text-end">
-        <a routerLink="/add-incident" class="btn btn-primary btn-sm mb-2 me-0">
+        <a routerLink="/add-incident" class="btn btn-primary btn-sm mb-3 me-0">
           <span class="fa fa-plus"></span> Add New
         </a>
     </div>
@@ -28,7 +28,7 @@
           <td>{{item.priority}}</td>
           <td>{{item.urgency}}</td>
           <td>
-              <a [routerLink]="['/view-incident/', item.id]" class="btn btn-sm"><span class="fa fa-eye"></span> View</a>
+              <a [routerLink]="['/view-incident/', item.id]" class="btn btn-sm m-0 ps-0"><span class="fa fa-eye"></span> View</a>
               <!-- <a href="#" class="btn btn-sm"><span class="fa fa-trash"></span> Delete</a> -->
           </td>
         </tr>
