--- a/src/app/pages/Users/users-list/users-list.component.html
+++ b/src/app/pages/Users/users-list/users-list.component.html
@@ -9,10 +9,10 @@
   <table class="table table-striped">
       <thead>
           <tr>
-            <th scope="col">Username</th>
-            <th scope="col">Role</th>
+            <th scope="col">Username</th>            
             <th scope="col">Email Address</th>      
-            <th scope="col">Mobile</th>            
+            <th scope="col">Mobile</th>  
+            <th scope="col">Created DateTime</th>          
           </tr>
         </thead>
         <tbody>
@@ -20,10 +20,10 @@
                 <th class="fw-normal text-center" colspan="4">No Data Available</th>                
             </tr>
           <tr *ngFor="let item of users">
-            <th>{{item.username}}</th>
-            <td>{{item.role}}</td>
-            <td>{{item.emailAddress}}</td>    
-            <td>{{item.mobile}}</td>            
+            <th>{{item.firstName}} {{item.lastName}}</th>            
+            <td>{{item.email}}</td>    
+            <td>{{item.mobileNo}}</td>            
+            <td>{{item.createdDateTime}}</td>
           </tr>
         </tbody>
     </table>
