--- a/src/app/pages/Users/add-user/add-user.component.html
+++ b/src/app/pages/Users/add-user/add-user.component.html
@@ -28,6 +28,13 @@
                         <input type="text" class="form-control" formControlName="lastName" id="inputlastname" placeholder="Enter Last Name">                
                       </div>
                     </div>
+
+                    <div class="row mb-3">      
+                      <div class="col-sm-12">
+                        <label for="inputUsername" class="form-label">Username</label>
+                        <input type="text" class="form-control" formControlName="username" id="inputUsername" placeholder="Enter Username">                
+                      </div>
+                    </div>
                 
                     <div class="row mb-3">      
                         <div class="col-sm-12">
