--- a/src/app/pages/Incidents/incidents-list/incidents-list.component.html
+++ b/src/app/pages/Incidents/incidents-list/incidents-list.component.html
@@ -24,9 +24,9 @@
         <tr *ngFor="let item of incidents">
           <td>{{item.description}}</td>
           <td>{{item.symptoms}}</td>
-          <td>{{item.status}}</td>
-          <td>{{item.priority}}</td>
-          <td>{{item.urgency}}</td>
+          <td>{{item.statusDisplayName}}</td>
+          <td>{{item.priorityDisplayName}}</td>
+          <td>{{item.urgencyDisplayName}}</td>
           <td>
               <a [routerLink]="['/view-incident/', item.id]" class="btn btn-sm m-0 ps-0"><span class="fa fa-eye"></span> View</a>
               <!-- <a href="#" class="btn btn-sm"><span class="fa fa-trash"></span> Delete</a> -->
